--- a/games.html
+++ b/games.html
@@ -49,7 +49,7 @@
 					<a href="gameHanna.html"><img alt="hra1" src="img/HannaGame.JPG" class="href-img-game"><br>by Hanna Hryharouskaya</a>
 					<a href="ultraland.html"><img alt="hra1" src="img/ultraland/bg.png" class="href-img-game"><br>by Patrik Kupčulák</a>
 					<a href="hraTetiana.html"><img alt="hra1" src="img/obrazokHry.png" class="href-img-game"><br>by Tetiana Kukhelna</a>
-					<a href="games/hra.html"><img alt="hra1" src="img/300x300.png" class="href-img-game"><br>by Vlad Chernov</a>
+					<a href="gameVlad.html"><img alt="hra1" src="img/300x300.png" class="href-img-game"><br>by Vlad Chernov</a>
 				</div>
 			</section>
 
