--- a/games/hra.html
+++ b/games/hra.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 	<header>
-		<h1>Skupinový projekt</h1> <a href="index.html">Obrázok<img alt="home_page" src=""></img></a> 
+		<h1>Skupinový projekt</h1> <a href="index.html">!@#$%^&*<img alt="home_page" src="!@#$%^&*"></img></a> 
 	</header>
 	<nav>
 		<ul class="nav justify-content-center">
@@ -25,35 +25,35 @@
 		  	</li>
 		</ul>
 	</nav>
-	<div>
-		<div class="row content margin-scroll">
+	<div class="container">
+		<div class="row content">
 			<section class="col-lg-9 col-md-12 col-sm-12">
-				♪♫ Úvodne random veci ♪♫
+				<!--♪♫ Úvodne random veci ♪♫-->!@#$%^&*
 			</section>
 
 			<aside class="col-lg-3 col-md-12 col-sm-12">
 				<h3>Zisti meniny</h3>
 				<div class="row">
-					<div class="cen-div">
+					<div class="input-cen-div">
 						<label>Deň</label><br>
 						<input type="number" id="input_day" class="input-num-nameday">
 					</div>
-					<div class="cen-div">
+					<div class="input-cen-div">
 						<label>Mesiac</label><br>
 						<input type="number" id="input_month" class="input-num-nameday" min="1" max="12">
 					</div>
 				</div>
 				<strong>alebo</strong>
 				<div class="row">
-					<div class="cen-div">
+					<div class="input-cen-div">
 						<label>Meno</label><br>
 						<input type="text" id="name_input" class="input-txt-nameday">
 					</div>
 				</div>
 				<button onclick="">Hľadaj</button>
 				<br>
-				<div>DATE</div>
-				<div>NAME</div>
+				<div><!--DATE-->!@#$%^&*</div>
+				<div><!--NAME-->!@#$%^&*</div>
 				<br>
 				<div>História</div>
 			</aside>
