--- a/games.html
+++ b/games.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 	<header>
-		<h1>Skupinový projekt</h1> <a href="index.html">Obrázok<img alt="home_page" src=""></img></a> 
+		<h1>Skupinový projekt</h1> <a href="index.html">Obrázok<img alt="home_page" src="!@#$%^&*"></img></a> 
 	</header>
 	<nav>
 		<ul class="nav justify-content-center">
@@ -28,7 +28,12 @@
 	<div>
 		<div class="row content margin-scroll">
 			<section class="col-lg-9 col-md-12 col-sm-12">
-				♪♫ Úvodne random veci ♪♫
+				<div class="row cen-div">
+					<a href="games/hra.html"><img alt="hra1" src="img/300x300.png" class="href-img-game"><br>Anna Grigorovskaya</a>
+					<a href="games/hra.html"><img alt="hra1" src="img/300x300.png" class="href-img-game"><br>Patrik Kupčulák</a>
+					<a href="games/hra.html"><img alt="hra1" src="img/300x300.png" class="href-img-game"><br>Tetiana Kukhelna</a>
+					<a href="games/hra.html"><img alt="hra1" src="img/300x300.png" class="href-img-game"><br>Vlad Chernov</a>
+				</div>
 			</section>
 
 			<aside class="col-lg-3 col-md-12 col-sm-12">
