--- a/index.html
+++ b/index.html
@@ -37,23 +37,23 @@
 				<div class="row">
 					<div class="cen-div">
 						<label>Mesiac</label><br>
-						<input type="number" id="input_month" class="input-num-nameday" placeholder="1" min="1" max="12" onchange="val_month(this)">
+						<input type="number" id="input_month" class="input-num-nameday" placeholder="1" min="1" max="12" onchange="val_month(this);validate_input_month(this);">
 					</div>
 					<div class="cen-div" id="div_28"> <!-- 28 -->
 						<label>Deň</label><br>
-						<input type="number" id="input_day28" class="input-num-nameday" placeholder="1" min="1" max="28">
+						<input type="number" id="input_day28" class="input-num-nameday" placeholder="1" min="1" max="28" onchange="validate_input_day(this, 28);">
 					</div>
 					<div class="cen-div" id="div_29"> <!-- 29 -->
 						<label>Deň</label><br>
-						<input type="number" id="input_day29" class="input-num-nameday" placeholder="1" min="1" max="29">
+						<input type="number" id="input_day29" class="input-num-nameday" placeholder="1" min="1" max="29" onchange="validate_input_day(this, 29);">
 					</div>
 					<div class="cen-div" id="div_30"> <!-- 30 -->
 						<label>Deň</label><br>
-						<input type="number" id="input_day30" class="input-num-nameday" placeholder="1" min="1" max="30">
+						<input type="number" id="input_day30" class="input-num-nameday" placeholder="1" min="1" max="30" onchange="validate_input_day(this, 30);">
 					</div>
 					<div class="cen-div" id="div_31"> <!-- 31 -->
 						<label>Deň</label><br>
-						<input type="number" id="input_day31" class="input-num-nameday" placeholder="1" min="1" max="31">
+						<input type="number" id="input_day31" class="input-num-nameday" placeholder="1" min="1" max="31" onchange="validate_input_day(this, 31);">
 					</div>
 				</div>
 				<strong>alebo</strong>
@@ -66,8 +66,8 @@
 				<button onclick="find_by_date()">Hľadať podľa dátumu</button>
 				<button onclick="find_by_name()">Hľadať podľa mena</button>
 				<br>
-				<div id="nameday_date"></div>
-				<div id="nameday_name"></div>
+				<div id="nameday_date_and_name"></div>
+				<div id="nameday_find"></div>
 				<br>
 				<div>História</div>
 			</aside>
