--- a/autory.html
+++ b/autory.html
@@ -7,10 +7,14 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 	<link rel="stylesheet" href="css/site.css">
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+	<script src="scripts/main_processes.js"></script>
 </head>
 <body>
 	<header>
-		<h1>Skupinový projekt</h1> <a href="index.html">Obrázok<img alt="home_page" src="!@#$%^&*"></img></a> 
+		<h1>Skupinový projekt</h1> <a href="index.html">Obrázok<img alt="home_page" src=""></img></a> 
 	</header>
 	<nav>
 		<ul class="nav justify-content-center">
@@ -40,25 +44,40 @@
 				<h3>Zisti meniny</h3>
 				<div class="row">
 					<div class="cen-div">
-						<label>Deň</label><br>
-						<input type="number" id="input_day" class="input-num-nameday">
-					</div>
-					<div class="cen-div">
 						<label>Mesiac</label><br>
-						<input type="number" id="input_month" class="input-num-nameday" min="1" max="12">
+						<input type="number" id="input_month" class="input-num-nameday" placeholder="1" min="1" max="12" onchange="val_month(this);validate_input_month(this);" required>
+					</div>
+					<div class="cen-div" id="div_28"> <!-- 28 -->
+						<label>Deň</label><br>
+						<input type="number" id="input_day28" class="input-num-nameday" placeholder="1" min="1" max="28" onchange="validate_input_day(this, 28);" required>
+					</div>
+					<div class="cen-div" id="div_29"> <!-- 29 -->
+						<label>Deň</label><br>
+						<input type="number" id="input_day29" class="input-num-nameday" placeholder="1" min="1" max="29" onchange="validate_input_day(this, 29);" required>
+					</div>
+					<div class="cen-div" id="div_30"> <!-- 30 -->
+						<label>Deň</label><br>
+						<input type="number" id="input_day30" class="input-num-nameday" placeholder="1" min="1" max="30" onchange="validate_input_day(this, 30);" required>
+					</div>
+					<div class="cen-div" id="div_31"> <!-- 31 -->
+						<label>Deň</label><br>
+						<input type="number" id="input_day31" class="input-num-nameday" placeholder="1" min="1" max="31" onchange="validate_input_day(this, 31);" required>
 					</div>
 				</div>
 				<strong>alebo</strong>
 				<div class="row">
 					<div class="cen-div">
 						<label>Meno</label><br>
-						<input type="text" id="name_input" class="input-txt-nameday">
+						<input type="text" id="name_input" class="input-txt-nameday" placeholder="Max 15 písmen" minlength="1" maxlength="15">
 					</div>
 				</div>
-				<button onclick="">Hľadaj</button>
+				<button onclick="find_by_date()">Hľadať podľa dátumu</button>
+				<button onclick="find_by_name()">Hľadať podľa mena</button>
 				<br>
-				<div>DATE</div>
-				<div>NAME</div>
+				<hr>
+				<div id="nameday_date_and_name"></div>
+				<div id="nameday_find"></div>
+				<!-- <nameday></nameday>         WEB COMPONENT-->
 				<br>
 				<div>História</div>
 			</aside>
@@ -71,8 +90,5 @@
 	  		<div>Icons made by <a href="https://www.flaticon.com/authors/eucalyp" title="Eucalyp">Eucalyp</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div>
 	  	</div>
 	</footer>
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 </body>
 </html>
