--- a/games.html
+++ b/games.html
@@ -1,5 +1,3 @@
-<!DOCTYPE html>
-<html lang="sk">
 <head>
 	<meta charset="UTF-8">
 	<link rel="icon" type="image/png" href="img/snowflake.png">
@@ -11,50 +9,81 @@
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 	<script src="scripts/main_processes.js"></script>
+	<link rel="preconnect" href="https://fonts.gstatic.com">
+	<link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet">
+
 </head>
 <body>
 	<header>
-		<h1>Skupinový projekt</h1> <a href="index.html">Obrázok<img alt="home_page" src=""></img></a> 
+		<div class="spinner">
+		  <div class="cube1"></div>
+		  <div class="cube2"></div>
+		</div>
+		<div> 
+			<h1>Skupinový projekt</h1>
+		</div>
+		<div style="width: 92px; height: 60px;">
+			
+		</div>  
 	</header>
 	<nav>
 		<ul class="nav justify-content-center">
 			<li class="nav-item">
 		    	<a class="nav-link" href="index.html">Domov</a>
 		  	</li>
-		  	<li class="nav-item">
-		  	  	<a class="nav-link" href="games.html">Hry</a>
+		  	<nav class="nav">
+		  	<li class="nav-item" id="topmenu">
+		  	  	<a class="nav-link" href="games.html">Hry  ⮟</a>
+		  	  	<ul class="submenu">
+		            <li><a href="">Hry</a>
+		            	<ul class="submenu" >
+				            <li><a href="">Hanna Hryharouskaya</a></li>
+				            <li><a href="">Patrik Kupčulák</a></li>
+				            <li><a href="">Tetiana Kukhelna</a></li>
+				            <li><a href="">Vlad Chernov</a></li>
+				          </ul>
+		            </li>
+		         	<li><a href="instructions.html">Ine</a>
+		         		<ul class="submenu">
+		         			<li><a href="aboutgames.html">O puzzle hrach</a></li>
+					        <li><a href="">Documentacia ku hram</a></li>
+				         </ul>
+		         	</li>
+		          </ul>
 		  	</li>
+		  </nav>
+	
+
 		  	<li class="nav-item">
 		  	  	<a class="nav-link" href="autory.html">Autory</a>
 		  	</li>
 		</ul>
 	</nav>
 	<div>
-		<div class="row content margin-scroll">
+		<div class="row content margin-scroll" id="content">
 			<section class="col-lg-9 col-md-12 col-sm-12">
-				<div class="row cen-div">
-					<a href="games/hra.html"><img alt="hra1" src="img/300x300.png" class="href-img-game"><br>Anna Grigorovskaya</a>
-					<a href="games/hra.html"><img alt="hra1" src="img/300x300.png" class="href-img-game"><br>Patrik Kupčulák</a>
-					<a href="games/hra.html"><img alt="hra1" src="img/300x300.png" class="href-img-game"><br>Tetiana Kukhelna</a>
-					<a href="games/hra.html"><img alt="hra1" src="img/300x300.png" class="href-img-game"><br>Vlad Chernov</a>
+				<div class="row cen-div" id="games">
+					<a href="games/hra.html"><img alt="hra1" src="img/300x300.png" class="href-img-game"><br>by Hanna Hryharouskaya</a>
+					<a href="games/hra.html"><img alt="hra1" src="img/300x300.png" class="href-img-game"><br>by Patrik Kupčulák</a>
+					<a href="games/hra.html"><img alt="hra1" src="img/300x300.png" class="href-img-game"><br>by Tetiana Kukhelna</a>
+					<a href="games/hra.html"><img alt="hra1" src="img/300x300.png" class="href-img-game"><br>by Vlad Chernov</a>
 				</div>
 			</section>
 
-			<aside class="col-lg-3 col-md-12 col-sm-12">
+			<aside id="aside" class="col-lg-3 col-md-12 col-sm-12">
 				<h3>Zisti meniny</h3>
 				<names-day></names-day>
 				<div id="nameday_date_and_name"></div>
 				<div id="nameday_find"></div>
-				<hr>
-				<div>História</div>
+				<br>
+				<div class="history">História</div>
 			</aside>
 		</div>
 	</div>
 	<footer class="footer">
 	  	<div class="container">
-	  		<span>Stránku vytvorili Anna Grigorovskaya, Patrik Kupčulák, Tetiana Kukhelna, Vlad Chernov </span>
+	  		<span>Copr. Hanna Hryharouskaya, Patrik Kupčulák, Tetiana Kukhelna, Vlad Chernov </span>
 	  		<br>
-	  		<div>Icons made by <a href="https://www.flaticon.com/authors/eucalyp" title="Eucalyp">Eucalyp</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div>
 	  	</div>
 	</footer>
 </body>
