--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 		            <li><a href="">Hry</a>
 		            	<ul class="submenu">
 				            <li><a href="">Hanna Hryharouskaya</a></li>
-				            <li><a href="">Patrik Kupčulák</a></li>
+				            <li><a href="ultraland.html">Patrik Kupčulák</a></li>
 				            <li><a href="">Tetiana Kukhelna</a></li>
 				            <li><a href="">Vlad Chernov</a></li>
 				          </ul>
@@ -71,13 +71,12 @@
 			<section id="section" class="col-lg-9 col-md-12 col-sm-12">
 
 				<div class="typewriter">
-				  <h1>Dnes 23.12.2020 Lukas</h1>
+				  <h1><div id="nameday_date_and_name"></div></h1>
 				</div>
 			</section>
 			<aside id="aside" class="col-lg-3 col-md-12 col-sm-12">
 				<h3>Zisti meniny</h3>
 				<names-day></names-day>
-				<div id="nameday_date_and_name"></div>
 				<div id="nameday_find"></div>
 				<br>
 				<div class="history">História</div>
