Hanna game (without demo), documentation(without text)

--- a/aboutgames.html
+++ b/aboutgames.html
@@ -40,8 +40,8 @@
 		  	  	<ul class="submenu">
 		            <li><a href="games.html">Hry</a>
 		            	<ul class="submenu">
-				            <li><a href="">Hanna Hryharouskaya</a></li>
-				            <li><a href="">Patrik Kupčulák</a></li>
+				            <li><a href="gameHanna.html">Hanna Hryharouskaya</a></li>
+				            <li><a href="ultraland.html">Patrik Kupčulák</a></li>
 				            <li><a href="">Tetiana Kukhelna</a></li>
 				            <li><a href="">Vlad Chernov</a></li>
 				          </ul>
@@ -49,7 +49,7 @@
 		         	<li><a href="instructions.html">Ine</a>
 		         		<ul class="submenu">
 		         			<li><a href="aboutgames.html">O puzzle hrach</a></li>
-					        <li><a href="">Documentacia ku hram</a></li>
+					        <li><a href="documentation.html">Documentacia ku hram</a></li>
 				         </ul>
 		         	</li>
 		          </ul>
