--- a/games.html
+++ b/games.html
@@ -35,18 +35,18 @@
 		  	<li class="nav-item" id="topmenu">
 		  	  	<a class="nav-link" href="games.html">Hry  ⮟</a>
 		  	  	<ul class="submenu">
-		            <li><a href="">Hry</a>
+		            <li><a href="games.html">Hry</a>
 		            	<ul class="submenu" >
-				            <li><a href="">Hanna Hryharouskaya</a></li>
-				            <li><a href="ultraland.html">Patrik Kupčulák</a></li>
+				            <li><a href="gameHanna.html">Hanna Hryharouskaya</a></li>
+				            <li><a href="">Patrik Kupčulák</a></li>
 				            <li><a href="">Tetiana Kukhelna</a></li>
 				            <li><a href="">Vlad Chernov</a></li>
-				        </ul>
+				          </ul>
 		            </li>
 		         	<li><a href="instructions.html">Ine</a>
 		         		<ul class="submenu">
 		         			<li><a href="aboutgames.html">O puzzle hrach</a></li>
-					        <li><a href="">Documentacia ku hram</a></li>
+					        <li><a href="documentation.html">Documentacia ku hram</a></li>
 				         </ul>
 		         	</li>
 		          </ul>
@@ -63,16 +63,17 @@
 		<div class="row content margin-scroll" id="content">
 			<section class="col-lg-9 col-md-12 col-sm-12">
 				<div class="row cen-div" id="games">
-					<a href=""><img alt="hra1" src="img/300x300.png" class="href-img-game"><br>by Hanna Hryharouskaya</a>
-					<a href="ultraland.html"><img alt="hra1" src="img/ultraland/bg.png" class="href-img-game"><br>by Patrik Kupčulák</a>
-					<a href=""><img alt="hra1" src="img/300x300.png" class="href-img-game"><br>by Tetiana Kukhelna</a>
-					<a href=""><img alt="hra1" src="img/300x300.png" class="href-img-game"><br>by Vlad Chernov</a>
+					<a href="gameHanna.html"><img alt="hra1" src="img/HannaGame.jpg" class="href-img-game"><br>by Hanna Hryharouskaya</a>
+					<a href="ultraland.html"><img alt="hra1" src="img/300x300.png" class="href-img-game"><br>by Patrik Kupčulák</a>
+					<a href="games/hra.html"><img alt="hra1" src="img/300x300.png" class="href-img-game"><br>by Tetiana Kukhelna</a>
+					<a href="games/hra.html"><img alt="hra1" src="img/300x300.png" class="href-img-game"><br>by Vlad Chernov</a>
 				</div>
 			</section>
 
 			<aside id="aside" class="col-lg-3 col-md-12 col-sm-12">
 				<h3>Zisti meniny</h3>
 				<names-day></names-day>
+				<div id="nameday_date_and_name"></div>
 				<div id="nameday_find"></div>
 				<br>
 				<div class="history">História</div>
