--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 	<link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="css/purecookie.css" async />
-  	<script src="scripts/purecookie.js" async></script>
 
 
 </head>
@@ -41,9 +40,9 @@
 		  	<li class="nav-item" id="topmenu">
 		  	  	<a class="nav-link" href="games.html">Hry  ⮟</a>
 		  	  	<ul class="submenu">
-		            <li><a href="">Hry</a>
+		            <li><a href="games.html">Hry</a>
 		            	<ul class="submenu">
-				            <li><a href="">Hanna Hryharouskaya</a></li>
+				            <li><a href="gameHanna.html">Hanna Hryharouskaya</a></li>
 				            <li><a href="ultraland.html">Patrik Kupčulák</a></li>
 				            <li><a href="">Tetiana Kukhelna</a></li>
 				            <li><a href="">Vlad Chernov</a></li>
@@ -52,7 +51,7 @@
 		         	<li><a href="instructions.html">Ine</a>
 		         		<ul class="submenu">
 		         			<li><a href="aboutgames.html">O puzzle hrach</a></li>
-					        <li><a href="">Documentacia ku hram</a></li>
+					        <li><a href="documentation.html">Documentacia ku hram</a></li>
 				         </ul>
 		         	</li>
 		          </ul>
@@ -71,12 +70,13 @@
 			<section id="section" class="col-lg-9 col-md-12 col-sm-12">
 
 				<div class="typewriter">
-				  <h1><div id="nameday_date_and_name"></div></h1>
+				  <h1>Dnes 23.12.2020 Lukas</h1>
 				</div>
 			</section>
 			<aside id="aside" class="col-lg-3 col-md-12 col-sm-12">
 				<h3>Zisti meniny</h3>
 				<names-day></names-day>
+				<div id="nameday_date_and_name"></div>
 				<div id="nameday_find"></div>
 				<br>
 				<div class="history">História</div>
