--- a/autory.html
+++ b/autory.html
@@ -37,9 +37,9 @@
 		  	<li class="nav-item" id="topmenu">
 		  	  	<a class="nav-link" href="games.html">Hry  ⮟</a>
 		  	  	<ul class="submenu">
-		            <li><a href="">Hry</a>
+		            <li><a href="games.html">Hry</a>
 		            	<ul class="submenu">
-				            <li><a href="">Hanna Hryharouskaya</a></li>
+				            <li><a href="gameHanna.html">Hanna Hryharouskaya</a></li>
 				            <li><a href="ultraland.html">Patrik Kupčulák</a></li>
 				            <li><a href="">Tetiana Kukhelna</a></li>
 				            <li><a href="">Vlad Chernov</a></li>
@@ -48,7 +48,7 @@
 		         	<li><a href="instructions.html">Ine</a>
 		         		<ul class="submenu">
 		         			<li><a href="aboutgames.html">O puzzle hrach</a></li>
-					        <li><a href="">Documentacia ku hram</a></li>
+					        <li><a href="documentation.html">Documentacia ku hram</a></li>
 				         </ul>
 		         	</li>
 		          </ul>
@@ -65,16 +65,19 @@
 		<div class="row content margin-scroll" id="content">
 			<section class="col-lg-9 col-md-12 col-sm-12">
 				<div class="text-in-div container">
-					<img alt="foto1" src="img/foto1.png" class="img-left"><p>Volám sa Hanna Hryharouskaya. Ja som som z Bieloruska, miesto Brest.Do 2011 som študovala na matematicko-ekonomickom gimnaziu Žukova G.K v Breste.V rokoch 2011-2015 som študovala v Brestskom štátnom polytechnickom kolize (od 2015. roka už Brestká štátna technická univerzita) na stavebnej fakulte. Teraz bývam v Bratislave a študujem na Slovenskej technickej univerzite na fakulte elektrotechniky a informatiky. </p><br><br>
-					<img alt="foto2" src="img/300x300.png" class="img-right"><p>Volám sa Tetiana Kukhelna. Som ukrajinka. Bývam v Bratislave a študujem na Slovenskej technickej univerzite na fakulte elektrotechniky a informatiky. Mám veľké plány do svojej budúcnosti. Túžba po poznaní a odpovede na moje otázky. Zmyslom života je byť šťastnou a robiť to, čo mi to prinesie.</p><br><br>
-					<img alt="foto3" src="img/foto3.png" class="img-left"><p>
-					<strong>~Kto som~</strong><br>Volám sa Patrik Kupčulák, som študentom Slovenskej technickej univerzity v Bratislave a študujem aplikovanú informatiku. Informatika ma baví už od detstva. Mojim koníčkom je vývoj hier a šport.<br><strong>~Na čom som pracoval~</strong><br> V zadaní som sa zameral na vyzobrazenie menín z XML súbra a na vyhľadávaní podľa dátumu či mena. Pri vyhľadávaní mena dokáže rozpoznať aj časť mena(sub-string). Vo vyhľadávaní sú spracované len meniny ľudí.</p><br><br>
-					<img alt="foto4" src="img/300x300.png" class="img-right"><p>Tuto môže byť tvoj text, nejaký popis, vlastnosti, na čom si pracoval, čomu sa venuješ, čo si riešil etc. REPEAT Tuto môže byť tvoj text, nejaký popis, vlastnosti, na čom si pracoval, čomu sa venuješ, čo si riešil etc. REPEAT Tuto môže byť tvoj text, nejaký popis, vlastnosti, na čom si pracoval, čomu sa venuješ, čo si riešil etc. REPEAT Tuto môže byť tvoj text, nejaký popis, vlastnosti, na čom si pracoval, čomu sa venuješ, čo si riešil etc.</p>
+					<img alt="hra1" src="img/foto1.png" class="img-left"><p>Volám sa Hanna Hryharouskaya. Ja som som z Bieloruska, miesto Brest.Do 2011 som študovala na matematicko-ekonomickom gimnaziu Žukova G.K v Breste.V rokoch 2011-2015 som študovala v Brestskom štátnom polytechnickom kolize (od 2015. roka už Brestká štátna technická univerzita) na stavebnej fakulte. Teraz bývam v Bratislave a študujem na Slovenskej technickej univerzite na fakulte elektrotechniky a informatiky. </p><br><br>
+					<img alt="hra1" src="img/foto2.png" class="img-right"><p>Volám sa Tetiana Kukhelna. Som ukrajinka. Bývam v Bratislave a študujem na Slovenskej technickej univerzite na fakulte elektrotechniky a informatiky. Mám veľké plány do svojej budúcnosti. Túžba po poznaní a odpovede na moje otázky. Zmyslom života je byť šťastnou a robiť to, čo mi to prinesie.</p><br>
+					<q><i>A mind of moderate capacity which closely pursues one study must infallibly arrive at great proficiency in that study.
+								<br>― Mary Shelley, Frankenstein</i></q>
+					<br><br>			
+					<img alt="hra1" src="img/300x300.png" class="img-left"><p>Tuto môže byť tvoj text, nejaký popis, vlastnosti, na čom si pracoval, čomu sa venuješ, čo si riešil etc. REPEAT Tuto môže byť tvoj text, nejaký popis, vlastnosti, na čom si pracoval, čomu sa venuješ, čo si riešil etc. REPEAT Tuto môže byť tvoj text, nejaký popis, vlastnosti, na čom si pracoval, čomu sa venuješ, čo si riešil etc. REPEAT Tuto môže byť tvoj text, nejaký popis, vlastnosti, na čom si pracoval, čomu sa venuješ, čo si riešil etc.</p><br><br>
+					<img alt="hra1" src="img/300x300.png" class="img-right"><p>Tuto môže byť tvoj text, nejaký popis, vlastnosti, na čom si pracoval, čomu sa venuješ, čo si riešil etc. REPEAT Tuto môže byť tvoj text, nejaký popis, vlastnosti, na čom si pracoval, čomu sa venuješ, čo si riešil etc. REPEAT Tuto môže byť tvoj text, nejaký popis, vlastnosti, na čom si pracoval, čomu sa venuješ, čo si riešil etc. REPEAT Tuto môže byť tvoj text, nejaký popis, vlastnosti, na čom si pracoval, čomu sa venuješ, čo si riešil etc.</p>
 				</div>
 			</section>
 			<aside id="aside" class="col-lg-3 col-md-12 col-sm-12">
 				<h3>Zisti meniny</h3>
 				<names-day></names-day>
+				<div id="nameday_date_and_name"></div>
 				<div id="nameday_find"></div>
 				<br>
 				<div class="history">História</div>
