--- a/games.html
+++ b/games.html
@@ -38,7 +38,7 @@
 		            <li><a href="games.html">Hry</a>
 		            	<ul class="submenu" >
 				            <li><a href="gameHanna.html">Hanna Hryharouskaya</a></li>
-				            <li><a href="">Patrik Kupčulák</a></li>
+				            <li><a href="ultraland.html">Patrik Kupčulák</a></li>
 				            <li><a href="">Tetiana Kukhelna</a></li>
 				            <li><a href="">Vlad Chernov</a></li>
 				          </ul>
@@ -64,7 +64,7 @@
 			<section class="col-lg-9 col-md-12 col-sm-12">
 				<div class="row cen-div" id="games">
 					<a href="gameHanna.html"><img alt="hra1" src="img/HannaGame.jpg" class="href-img-game"><br>by Hanna Hryharouskaya</a>
-					<a href="ultraland.html"><img alt="hra1" src="img/300x300.png" class="href-img-game"><br>by Patrik Kupčulák</a>
+					<a href="ultraland.html"><img alt="hra1" src="img/ultraland/bg.png" class="href-img-game"><br>by Patrik Kupčulák</a>
 					<a href="games/hra.html"><img alt="hra1" src="img/300x300.png" class="href-img-game"><br>by Tetiana Kukhelna</a>
 					<a href="games/hra.html"><img alt="hra1" src="img/300x300.png" class="href-img-game"><br>by Vlad Chernov</a>
 				</div>
