--- a/index.html
+++ b/index.html
@@ -70,13 +70,12 @@
 			<section id="section" class="col-lg-9 col-md-12 col-sm-12">
 
 				<div class="typewriter">
-				  <h1>Dnes 23.12.2020 Lukas</h1>
+				  <h1><div id="nameday_date_and_name"></div></h1>
 				</div>
 			</section>
 			<aside id="aside" class="col-lg-3 col-md-12 col-sm-12">
 				<h3>Zisti meniny</h3>
 				<names-day></names-day>
-				<div id="nameday_date_and_name"></div>
 				<div id="nameday_find"></div>
 				<br>
 				<div class="history">História</div>
