--- a/ultraland.html
+++ b/ultraland.html
@@ -36,7 +36,7 @@
 		  	  	<ul class="submenu">
 		            <li><a href="">Hry</a>
 		            	<ul class="submenu" >
-				            <li><a href="">Hanna Hryharouskaya</a></li>
+				            <li><a href="gameHanna.html">Hanna Hryharouskaya</a></li>
 				            <li><a href="ultraland.html">Patrik Kupčulák</a></li>
 				            <li><a href="">Tetiana Kukhelna</a></li>
 				            <li><a href="">Vlad Chernov</a></li>
