--- a/documentation.html
+++ b/documentation.html
@@ -54,7 +54,6 @@
 		          </ul>
 		  	</li>
 		  </nav>
-	
 
 		  	<li class="nav-item">
 		  	  	<a class="nav-link" href="autory.html">Autory</a>
@@ -65,7 +64,51 @@
 		<div class="row content margin-scroll" id="content">
 			<section class="col-lg-9 col-md-12 col-sm-12">
 				<div class="text-in-div container">
-					
+					<table class="table-1">
+						    <tr>
+						        <td>Meno</td>
+						        <td>Uloha</td>
+						        <td>Co bolo spravene</td>
+						        <td>Kontakt</td>
+						    </tr>
+						    <tr>
+						        <td><span style="font-family: vt323, monospace; text-align: center;">Patrik kupčulák</span></td>
+						        <td>web komponent zobrazenia menin</td>
+						        <td>zobrazenie aktuálneho dátumu s meninami v daný deň. súčasťou je obojsmerné zisťovanie priradenia dátumu a mena (pomocou xml).pri vyhľadávaní mena dokáže rozpoznať aj časť mena (sub-string)</span></td>
+						        <td></td>
+						    </tr>
+						    <tr>
+						        <td><span style="font-family: vt323, monospace; text-align: center;">Hanna hryharouskaya</span></td>
+						        <td>dizajn</td>
+						        <td><div>návrh grafického dizajnu pomocou css len v externom súbore.<div>responzívny dizajn + prispôsobenie stránky pre tlač pomocou css.</td>
+						        <td>xhryharouskaya@stuba.sk</td>
+						    </tr>
+						    <tr>
+						        <td><span style="font-family: vt323, monospace; text-align: center;">Tetiana kukhelna</span></td>
+						        <td></td>
+						        <td></td>
+						        <td></td>
+						    </tr>
+						    <tr>
+						        <td><span style="font-family: vt323, monospace; text-align: center;">Vlad chernov</span></td>
+						        <td></td>
+						        <td></td>
+						        <td></td>
+						    </tr>
+					</table>
+					<br><br><br>
+					<h5>Wireframes</h5>
+					<p> Sme spolu vo <a href="https://www.figma.com/">figme</a> robili wireframe stranky, aby rychlejsie pochopit kostru, dizajn a kde budu nase web komponenty</p>
+					<p>Naiviac wireframov a nase inspiration collage na dizajn -> <a href="https://www.figma.com/file/MFEELiRwU47JSGAmGwAcNS/WebTechProject?node-id=0%3A1">WebTechProject</a> </p>
+					<br>
+					<div class="pictures" >
+					<img src="img/1.png" alt="Wireframe1" width="50%" >
+					<img src="img/2.png" alt="Wireframe1" width="40%" >
+					<br>
+					<img src="img/3.png" alt="Wireframe1" width="25%" >
+					<img src="img/4.png" alt="Wireframe1" width="50%">
+					</div>
+
 				</div>
 			</section>
 			<aside id="aside" class="col-lg-3 col-md-12 col-sm-12">
