--- a/ultraland.html
+++ b/ultraland.html
@@ -59,6 +59,7 @@
 	<div>
 		<div class="row content margin-scroll" id="content">
 			<section class="col-lg-9 col-md-12 col-sm-12">
+				<h6> Ak hrá príliš veľká prosím zmenšíte veľkosť v prehadaci </h6>
 				<button id="start">Začať hru</button>
 				<button id="demo">Spusti demo</button>
 				<div id="timer"></div>
