--- a/games.html
+++ b/games.html
@@ -63,7 +63,7 @@
 		<div class="row content margin-scroll" id="content">
 			<section class="col-lg-9 col-md-12 col-sm-12">
 				<div class="row cen-div" id="games">
-					<a href="gameHanna.html"><img alt="hra1" src="img/HannaGame.jpg" class="href-img-game"><br>by Hanna Hryharouskaya</a>
+					<a href="gameHanna.html"><img alt="hra1" src="img/HannaGame.JPG" class="href-img-game"><br>by Hanna Hryharouskaya</a>
 					<a href="ultraland.html"><img alt="hra1" src="img/ultraland/bg.png" class="href-img-game"><br>by Patrik Kupčulák</a>
 					<a href="games/hra.html"><img alt="hra1" src="img/obrazokHry.png" class="href-img-game"><br>by Tetiana Kukhelna</a>
 					<a href="games/hra.html"><img alt="hra1" src="img/300x300.png" class="href-img-game"><br>by Vlad Chernov</a>
