--- a/aboutgames.html
+++ b/aboutgames.html
@@ -42,7 +42,7 @@
 		            	<ul class="submenu">
 				            <li><a href="gameHanna.html">Hanna Hryharouskaya</a></li>
 				            <li><a href="ultraland.html">Patrik Kupčulák</a></li>
-				            <li><a href="">Tetiana Kukhelna</a></li>
+				            <li><a href="hraTetiana.html">Tetiana Kukhelna</a></li>
 				            <li><a href="">Vlad Chernov</a></li>
 				          </ul>
 		            </li>
